# draw9

./: .gitignore  README.md  test.py
app/: pubspec.yaml
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/lib/: constants.dart  main.dart  theme.dart
app/lib/model/: drawing_info.dart  drawing_mode.dart
app/lib/pages/: drawing_page.dart  onboarding_page.dart
app/lib/view/: onboarding_page.dart
app/lib/view/drawing_page/: drawing_page.dart
app/lib/view/drawing_page/widgets/: drawing_menu.dart
app/lib/view/onboarding_page/: onboarding_page.dart
app/lib/view/onboarding_page/widgets/: about_draw9.dart  get_started_slider.dart
model/: .gitignore  CLIP.ipynb  app.py  data.ipynb  inference.ipynb  main.ipynb  model.pt  pyproject.toml  requirements.txt  test.ipynb  train.py
model/data/: 30_labels.txt  __init__.py  data.ipynb  get_labels.py  labels.txt  load_dataset.py  prepare_data.ipynb  prepare_dataset.py
model/models/: model.py
model/models/checkpoint/: best_cnn.pt
model/models/pt/: simple_cnn.pt
model/utils/: util.py
