[tool.poetry]
name = "draw9"
version = "0.1.0"
description = "Drawing Recognition"
authors = ["watchstep <cathy033077@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.17.1"
quickdraw = "^0.2.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
